修改代码规范(瞎改)

--- a/.env
+++ b/.env
@@ -18,15 +18,15 @@ APP_URL=http://www.laravel.com
 #数据库连接方式
 DB_CONNECTION=mysql
 #数据库主机地址
-DB_HOST=
+DB_HOST=127.0.0.1
 #数据库端口
-DB_PORT=3306
+DB_PORT=43306
 #数据库名称
-DB_DATABASE=
+DB_DATABASE=laravel
 #连接使用用户名
-DB_USERNAME=
+DB_USERNAME=root
 #连接使用密码
-DB_PASSWORD=
+DB_PASSWORD=root
 
 #广播驱动
 BROADCAST_DRIVER=redis
